--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,3 +1,4 @@
 @import 'custom.scss';
+@import 'transitions.scss';
 @import 'node_modules/bootstrap/scss/bootstrap';
 @import 'node_modules/bootstrap-vue/src/index.scss';
