--- a/src/assets/styles/default.scss
+++ b/src/assets/styles/default.scss
@@ -1,4 +1,5 @@
-@import 'custom.scss';
+@import 'typography.scss';
 @import 'transitions.scss';
+@import 'custom.scss';
 @import 'node_modules/bootstrap/scss/bootstrap';
 @import 'node_modules/bootstrap-vue/src/index.scss';
