Modify Calendly widget to appear in modal popup

--- a/src/assets/styles/default.scss
+++ b/src/assets/styles/default.scss
@@ -1,5 +1,6 @@
-@import 'typography.scss';
-@import 'transitions.scss';
 @import 'custom.scss';
+@import 'calendlyWidget.scss';
+@import 'transitions.scss';
+@import 'typography.scss';
 @import 'node_modules/bootstrap/scss/bootstrap';
 @import 'node_modules/bootstrap-vue/src/index.scss';
