--- a/src/assets/styles/agency/typography.scss
+++ b/src/assets/styles/agency/typography.scss
@@ -1,27 +1,30 @@
-/* latin */
+/* nunito-regular - latin */
 @font-face {
+  font-display: swap;
   font-family: 'Nunito';
   font-style: normal;
   font-weight: 400;
-  font-display: fallback;
-  src: local('Nunito Regular'), local('Nunito-Regular'), url(https://fonts.gstatic.com/s/nunito/v10/XRXV3I6Li01BKofINeaB.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  src: local('Nunito Regular'), local('Nunito-Regular'),
+       url('./fonts/nunito-v10-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+       url('./fonts/nunito-v10-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
-/* latin */
+/* nunito-600 - latin */
 @font-face {
+  font-display: swap;
   font-family: 'Nunito';
   font-style: normal;
   font-weight: 600;
-  font-display: fallback;
-  src: local('Nunito SemiBold'), local('Nunito-SemiBold'), url(https://fonts.gstatic.com/s/nunito/v10/XRXW3I6Li01BKofA6sKUYevI.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  src: local('Nunito SemiBold'), local('Nunito-SemiBold'),
+       url('./fonts/nunito-v10-latin-600.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+       url('./fonts/nunito-v10-latin-600.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
-/* latin */
+/* nunito-700 - latin */
 @font-face {
+  font-display: swap;
   font-family: 'Nunito';
   font-style: normal;
   font-weight: 700;
-  font-display: fallback;
-  src: local('Nunito Bold'), local('Nunito-Bold'), url(https://fonts.gstatic.com/s/nunito/v10/XRXW3I6Li01BKofAjsOUYevI.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  src: local('Nunito Bold'), local('Nunito-Bold'),
+       url('./fonts/nunito-v10-latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+       url('./fonts/nunito-v10-latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
